// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datasource Management: Create Datasource form with different authType configurations should render normally with all authMethod combinations 1`] = `
<EuiCompressedSuperSelect
  compressed={true}
  data-test-subj="createDataSourceFormAuthTypeSelect"
  disabled={true}
  fullWidth={false}
  hasDividers={false}
  id="generated-id"
  isInvalid={false}
  isLoading={false}
  name="Credential"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  options={
    Array [
      Object {
        "inputDisplay": "AWS SigV4",
        "value": "sigv4",
      },
    ]
  }
  valueOfSelected="sigv4"
>
  <EuiInputPopover
    anchorPosition="downLeft"
    attachToAnchor={true}
    className="euiSuperSelect"
    closePopover={[Function]}
    display="block"
    fullWidth={false}
    input={
      <EuiSuperSelectControl
        className=""
        compressed={true}
        data-test-subj="createDataSourceFormAuthTypeSelect"
        disabled={true}
        fullWidth={false}
        id="generated-id"
        isInvalid={false}
        isLoading={false}
        name="Credential"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": "AWS SigV4",
              "value": "sigv4",
            },
          ]
        }
        value="sigv4"
      />
    }
    isOpen={false}
    panelPaddingSize="none"
  >
    <EuiPopover
      anchorPosition="downLeft"
      attachToAnchor={true}
      button={
        <EuiResizeObserver
          onResize={[Function]}
        >
          [Function]
        </EuiResizeObserver>
      }
      buttonRef={[Function]}
      className="euiInputPopover euiSuperSelect"
      closePopover={[Function]}
      display="block"
      hasArrow={true}
      isOpen={false}
      ownFocus={false}
      panelPaddingSize="none"
      panelRef={[Function]}
    >
      <EuiOutsideClickDetector
        onOutsideClick={[Function]}
      >
        <div
          className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="euiPopover__anchor"
          >
            <EuiResizeObserver
              onResize={[Function]}
            >
              <div>
                <EuiSuperSelectControl
                  className=""
                  compressed={true}
                  data-test-subj="createDataSourceFormAuthTypeSelect"
                  disabled={true}
                  fullWidth={false}
                  id="generated-id"
                  isInvalid={false}
                  isLoading={false}
                  name="Credential"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  options={
                    Array [
                      Object {
                        "inputDisplay": "AWS SigV4",
                        "value": "sigv4",
                      },
                    ]
                  }
                  value="sigv4"
                >
                  <input
                    id="generated-id"
                    name="Credential"
                    type="hidden"
                    value="sigv4"
                  />
                  <EuiFormControlLayout
                    compressed={true}
                    fullWidth={false}
                    icon={
                      Object {
                        "side": "right",
                        "type": "arrowDown",
                      }
                    }
                    isLoading={false}
                  >
                    <div
                      className="euiFormControlLayout euiFormControlLayout--compressed"
                    >
                      <div
                        className="euiFormControlLayout__childrenWrapper"
                      >
                        <EuiScreenReaderOnly>
                          <span
                            className="euiScreenReaderOnly"
                            id="generated-id"
                          >
                            <EuiI18n
                              default="Select an option: {selectedValue}, is selected"
                              token="euiSuperSelectControl.selectAnOption"
                              values={
                                Object {
                                  "selectedValue": "AWS SigV4",
                                }
                              }
                            >
                              Select an option: AWS SigV4, is selected
                            </EuiI18n>
                          </span>
                        </EuiScreenReaderOnly>
                        <button
                          aria-haspopup="true"
                          aria-labelledby="generated-id generated-id"
                          className="euiSuperSelectControl euiSuperSelectControl--compressed"
                          data-test-subj="createDataSourceFormAuthTypeSelect"
                          disabled={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          AWS SigV4
                        </button>
                        <EuiFormControlLayoutIcons
                          compressed={true}
                          icon={
                            Object {
                              "side": "right",
                              "type": "arrowDown",
                            }
                          }
                          isLoading={false}
                        >
                          <div
                            className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                          >
                            <EuiFormControlLayoutCustomIcon
                              size="s"
                              type="arrowDown"
                            >
                              <span
                                className="euiFormControlLayoutCustomIcon"
                              >
                                <EuiIcon
                                  aria-hidden="true"
                                  className="euiFormControlLayoutCustomIcon__icon"
                                  size="s"
                                  type="arrowDown"
                                >
                                  <span
                                    aria-hidden="true"
                                    className="euiFormControlLayoutCustomIcon__icon"
                                    data-euiicon-type="arrowDown"
                                    size="s"
                                  />
                                </EuiIcon>
                              </span>
                            </EuiFormControlLayoutCustomIcon>
                          </div>
                        </EuiFormControlLayoutIcons>
                      </div>
                    </div>
                  </EuiFormControlLayout>
                </EuiSuperSelectControl>
              </div>
            </EuiResizeObserver>
          </div>
        </div>
      </EuiOutsideClickDetector>
    </EuiPopover>
  </EuiInputPopover>
</EuiCompressedSuperSelect>
`;

exports[`Datasource Management: Create Datasource form with different authType configurations should render normally with all authMethod combinations 2`] = `
<EuiCompressedSuperSelect
  compressed={true}
  data-test-subj="createDataSourceFormAuthTypeSelect"
  disabled={true}
  fullWidth={false}
  hasDividers={false}
  id="generated-id"
  isInvalid={false}
  isLoading={false}
  name="Credential"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  options={
    Array [
      Object {
        "inputDisplay": "No authentication",
        "value": "no_auth",
      },
    ]
  }
  valueOfSelected="no_auth"
>
  <EuiInputPopover
    anchorPosition="downLeft"
    attachToAnchor={true}
    className="euiSuperSelect"
    closePopover={[Function]}
    display="block"
    fullWidth={false}
    input={
      <EuiSuperSelectControl
        className=""
        compressed={true}
        data-test-subj="createDataSourceFormAuthTypeSelect"
        disabled={true}
        fullWidth={false}
        id="generated-id"
        isInvalid={false}
        isLoading={false}
        name="Credential"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": "No authentication",
              "value": "no_auth",
            },
          ]
        }
        value="no_auth"
      />
    }
    isOpen={false}
    panelPaddingSize="none"
  >
    <EuiPopover
      anchorPosition="downLeft"
      attachToAnchor={true}
      button={
        <EuiResizeObserver
          onResize={[Function]}
        >
          [Function]
        </EuiResizeObserver>
      }
      buttonRef={[Function]}
      className="euiInputPopover euiSuperSelect"
      closePopover={[Function]}
      display="block"
      hasArrow={true}
      isOpen={false}
      ownFocus={false}
      panelPaddingSize="none"
      panelRef={[Function]}
    >
      <EuiOutsideClickDetector
        onOutsideClick={[Function]}
      >
        <div
          className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="euiPopover__anchor"
          >
            <EuiResizeObserver
              onResize={[Function]}
            >
              <div>
                <EuiSuperSelectControl
                  className=""
                  compressed={true}
                  data-test-subj="createDataSourceFormAuthTypeSelect"
                  disabled={true}
                  fullWidth={false}
                  id="generated-id"
                  isInvalid={false}
                  isLoading={false}
                  name="Credential"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  options={
                    Array [
                      Object {
                        "inputDisplay": "No authentication",
                        "value": "no_auth",
                      },
                    ]
                  }
                  value="no_auth"
                >
                  <input
                    id="generated-id"
                    name="Credential"
                    type="hidden"
                    value="no_auth"
                  />
                  <EuiFormControlLayout
                    compressed={true}
                    fullWidth={false}
                    icon={
                      Object {
                        "side": "right",
                        "type": "arrowDown",
                      }
                    }
                    isLoading={false}
                  >
                    <div
                      className="euiFormControlLayout euiFormControlLayout--compressed"
                    >
                      <div
                        className="euiFormControlLayout__childrenWrapper"
                      >
                        <EuiScreenReaderOnly>
                          <span
                            className="euiScreenReaderOnly"
                            id="generated-id"
                          >
                            <EuiI18n
                              default="Select an option: {selectedValue}, is selected"
                              token="euiSuperSelectControl.selectAnOption"
                              values={
                                Object {
                                  "selectedValue": "No authentication",
                                }
                              }
                            >
                              Select an option: No authentication, is selected
                            </EuiI18n>
                          </span>
                        </EuiScreenReaderOnly>
                        <button
                          aria-haspopup="true"
                          aria-labelledby="generated-id generated-id"
                          className="euiSuperSelectControl euiSuperSelectControl--compressed"
                          data-test-subj="createDataSourceFormAuthTypeSelect"
                          disabled={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          No authentication
                        </button>
                        <EuiFormControlLayoutIcons
                          compressed={true}
                          icon={
                            Object {
                              "side": "right",
                              "type": "arrowDown",
                            }
                          }
                          isLoading={false}
                        >
                          <div
                            className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                          >
                            <EuiFormControlLayoutCustomIcon
                              size="s"
                              type="arrowDown"
                            >
                              <span
                                className="euiFormControlLayoutCustomIcon"
                              >
                                <EuiIcon
                                  aria-hidden="true"
                                  className="euiFormControlLayoutCustomIcon__icon"
                                  size="s"
                                  type="arrowDown"
                                >
                                  <span
                                    aria-hidden="true"
                                    className="euiFormControlLayoutCustomIcon__icon"
                                    data-euiicon-type="arrowDown"
                                    size="s"
                                  />
                                </EuiIcon>
                              </span>
                            </EuiFormControlLayoutCustomIcon>
                          </div>
                        </EuiFormControlLayoutIcons>
                      </div>
                    </div>
                  </EuiFormControlLayout>
                </EuiSuperSelectControl>
              </div>
            </EuiResizeObserver>
          </div>
        </div>
      </EuiOutsideClickDetector>
    </EuiPopover>
  </EuiInputPopover>
</EuiCompressedSuperSelect>
`;

exports[`Datasource Management: Create Datasource form with different authType configurations should render normally with all authMethod combinations 3`] = `
<EuiCompressedSuperSelect
  compressed={true}
  data-test-subj="createDataSourceFormAuthTypeSelect"
  disabled={true}
  fullWidth={false}
  hasDividers={false}
  id="generated-id"
  isInvalid={false}
  isLoading={false}
  name="Credential"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  options={
    Array [
      Object {
        "inputDisplay": "Username & Password",
        "value": "username_password",
      },
    ]
  }
  valueOfSelected="username_password"
>
  <EuiInputPopover
    anchorPosition="downLeft"
    attachToAnchor={true}
    className="euiSuperSelect"
    closePopover={[Function]}
    display="block"
    fullWidth={false}
    input={
      <EuiSuperSelectControl
        className=""
        compressed={true}
        data-test-subj="createDataSourceFormAuthTypeSelect"
        disabled={true}
        fullWidth={false}
        id="generated-id"
        isInvalid={false}
        isLoading={false}
        name="Credential"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": "Username & Password",
              "value": "username_password",
            },
          ]
        }
        value="username_password"
      />
    }
    isOpen={false}
    panelPaddingSize="none"
  >
    <EuiPopover
      anchorPosition="downLeft"
      attachToAnchor={true}
      button={
        <EuiResizeObserver
          onResize={[Function]}
        >
          [Function]
        </EuiResizeObserver>
      }
      buttonRef={[Function]}
      className="euiInputPopover euiSuperSelect"
      closePopover={[Function]}
      display="block"
      hasArrow={true}
      isOpen={false}
      ownFocus={false}
      panelPaddingSize="none"
      panelRef={[Function]}
    >
      <EuiOutsideClickDetector
        onOutsideClick={[Function]}
      >
        <div
          className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="euiPopover__anchor"
          >
            <EuiResizeObserver
              onResize={[Function]}
            >
              <div>
                <EuiSuperSelectControl
                  className=""
                  compressed={true}
                  data-test-subj="createDataSourceFormAuthTypeSelect"
                  disabled={true}
                  fullWidth={false}
                  id="generated-id"
                  isInvalid={false}
                  isLoading={false}
                  name="Credential"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  options={
                    Array [
                      Object {
                        "inputDisplay": "Username & Password",
                        "value": "username_password",
                      },
                    ]
                  }
                  value="username_password"
                >
                  <input
                    id="generated-id"
                    name="Credential"
                    type="hidden"
                    value="username_password"
                  />
                  <EuiFormControlLayout
                    compressed={true}
                    fullWidth={false}
                    icon={
                      Object {
                        "side": "right",
                        "type": "arrowDown",
                      }
                    }
                    isLoading={false}
                  >
                    <div
                      className="euiFormControlLayout euiFormControlLayout--compressed"
                    >
                      <div
                        className="euiFormControlLayout__childrenWrapper"
                      >
                        <EuiScreenReaderOnly>
                          <span
                            className="euiScreenReaderOnly"
                            id="generated-id"
                          >
                            <EuiI18n
                              default="Select an option: {selectedValue}, is selected"
                              token="euiSuperSelectControl.selectAnOption"
                              values={
                                Object {
                                  "selectedValue": "Username & Password",
                                }
                              }
                            >
                              Select an option: Username & Password, is selected
                            </EuiI18n>
                          </span>
                        </EuiScreenReaderOnly>
                        <button
                          aria-haspopup="true"
                          aria-labelledby="generated-id generated-id"
                          className="euiSuperSelectControl euiSuperSelectControl--compressed"
                          data-test-subj="createDataSourceFormAuthTypeSelect"
                          disabled={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          Username & Password
                        </button>
                        <EuiFormControlLayoutIcons
                          compressed={true}
                          icon={
                            Object {
                              "side": "right",
                              "type": "arrowDown",
                            }
                          }
                          isLoading={false}
                        >
                          <div
                            className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                          >
                            <EuiFormControlLayoutCustomIcon
                              size="s"
                              type="arrowDown"
                            >
                              <span
                                className="euiFormControlLayoutCustomIcon"
                              >
                                <EuiIcon
                                  aria-hidden="true"
                                  className="euiFormControlLayoutCustomIcon__icon"
                                  size="s"
                                  type="arrowDown"
                                >
                                  <span
                                    aria-hidden="true"
                                    className="euiFormControlLayoutCustomIcon__icon"
                                    data-euiicon-type="arrowDown"
                                    size="s"
                                  />
                                </EuiIcon>
                              </span>
                            </EuiFormControlLayoutCustomIcon>
                          </div>
                        </EuiFormControlLayoutIcons>
                      </div>
                    </div>
                  </EuiFormControlLayout>
                </EuiSuperSelectControl>
              </div>
            </EuiResizeObserver>
          </div>
        </div>
      </EuiOutsideClickDetector>
    </EuiPopover>
  </EuiInputPopover>
</EuiCompressedSuperSelect>
`;

exports[`Datasource Management: Create Datasource form with different authType configurations should render normally with all authMethod combinations 4`] = `
<EuiCompressedSuperSelect
  compressed={true}
  data-test-subj="createDataSourceFormAuthTypeSelect"
  disabled={false}
  fullWidth={false}
  hasDividers={false}
  id="generated-id"
  isInvalid={false}
  isLoading={false}
  name="Credential"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  options={
    Array [
      Object {
        "inputDisplay": "No authentication",
        "value": "no_auth",
      },
      Object {
        "inputDisplay": "AWS SigV4",
        "value": "sigv4",
      },
    ]
  }
  valueOfSelected="no_auth"
>
  <EuiInputPopover
    anchorPosition="downLeft"
    attachToAnchor={true}
    className="euiSuperSelect"
    closePopover={[Function]}
    display="block"
    fullWidth={false}
    input={
      <EuiSuperSelectControl
        className=""
        compressed={true}
        data-test-subj="createDataSourceFormAuthTypeSelect"
        disabled={false}
        fullWidth={false}
        id="generated-id"
        isInvalid={false}
        isLoading={false}
        name="Credential"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": "No authentication",
              "value": "no_auth",
            },
            Object {
              "inputDisplay": "AWS SigV4",
              "value": "sigv4",
            },
          ]
        }
        value="no_auth"
      />
    }
    isOpen={false}
    panelPaddingSize="none"
  >
    <EuiPopover
      anchorPosition="downLeft"
      attachToAnchor={true}
      button={
        <EuiResizeObserver
          onResize={[Function]}
        >
          [Function]
        </EuiResizeObserver>
      }
      buttonRef={[Function]}
      className="euiInputPopover euiSuperSelect"
      closePopover={[Function]}
      display="block"
      hasArrow={true}
      isOpen={false}
      ownFocus={false}
      panelPaddingSize="none"
      panelRef={[Function]}
    >
      <EuiOutsideClickDetector
        onOutsideClick={[Function]}
      >
        <div
          className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="euiPopover__anchor"
          >
            <EuiResizeObserver
              onResize={[Function]}
            >
              <div>
                <EuiSuperSelectControl
                  className=""
                  compressed={true}
                  data-test-subj="createDataSourceFormAuthTypeSelect"
                  disabled={false}
                  fullWidth={false}
                  id="generated-id"
                  isInvalid={false}
                  isLoading={false}
                  name="Credential"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  options={
                    Array [
                      Object {
                        "inputDisplay": "No authentication",
                        "value": "no_auth",
                      },
                      Object {
                        "inputDisplay": "AWS SigV4",
                        "value": "sigv4",
                      },
                    ]
                  }
                  value="no_auth"
                >
                  <input
                    id="generated-id"
                    name="Credential"
                    type="hidden"
                    value="no_auth"
                  />
                  <EuiFormControlLayout
                    compressed={true}
                    fullWidth={false}
                    icon={
                      Object {
                        "side": "right",
                        "type": "arrowDown",
                      }
                    }
                    isLoading={false}
                  >
                    <div
                      className="euiFormControlLayout euiFormControlLayout--compressed"
                    >
                      <div
                        className="euiFormControlLayout__childrenWrapper"
                      >
                        <EuiScreenReaderOnly>
                          <span
                            className="euiScreenReaderOnly"
                            id="generated-id"
                          >
                            <EuiI18n
                              default="Select an option: {selectedValue}, is selected"
                              token="euiSuperSelectControl.selectAnOption"
                              values={
                                Object {
                                  "selectedValue": "No authentication",
                                }
                              }
                            >
                              Select an option: No authentication, is selected
                            </EuiI18n>
                          </span>
                        </EuiScreenReaderOnly>
                        <button
                          aria-haspopup="true"
                          aria-labelledby="generated-id generated-id"
                          className="euiSuperSelectControl euiSuperSelectControl--compressed"
                          data-test-subj="createDataSourceFormAuthTypeSelect"
                          disabled={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          No authentication
                        </button>
                        <EuiFormControlLayoutIcons
                          compressed={true}
                          icon={
                            Object {
                              "side": "right",
                              "type": "arrowDown",
                            }
                          }
                          isLoading={false}
                        >
                          <div
                            className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                          >
                            <EuiFormControlLayoutCustomIcon
                              size="s"
                              type="arrowDown"
                            >
                              <span
                                className="euiFormControlLayoutCustomIcon"
                              >
                                <EuiIcon
                                  aria-hidden="true"
                                  className="euiFormControlLayoutCustomIcon__icon"
                                  size="s"
                                  type="arrowDown"
                                >
                                  <span
                                    aria-hidden="true"
                                    className="euiFormControlLayoutCustomIcon__icon"
                                    data-euiicon-type="arrowDown"
                                    size="s"
                                  />
                                </EuiIcon>
                              </span>
                            </EuiFormControlLayoutCustomIcon>
                          </div>
                        </EuiFormControlLayoutIcons>
                      </div>
                    </div>
                  </EuiFormControlLayout>
                </EuiSuperSelectControl>
              </div>
            </EuiResizeObserver>
          </div>
        </div>
      </EuiOutsideClickDetector>
    </EuiPopover>
  </EuiInputPopover>
</EuiCompressedSuperSelect>
`;

exports[`Datasource Management: Create Datasource form with different authType configurations should render normally with all authMethod combinations 5`] = `
<EuiCompressedSuperSelect
  compressed={true}
  data-test-subj="createDataSourceFormAuthTypeSelect"
  disabled={false}
  fullWidth={false}
  hasDividers={false}
  id="generated-id"
  isInvalid={false}
  isLoading={false}
  name="Credential"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  options={
    Array [
      Object {
        "inputDisplay": "Username & Password",
        "value": "username_password",
      },
      Object {
        "inputDisplay": "AWS SigV4",
        "value": "sigv4",
      },
    ]
  }
  valueOfSelected="username_password"
>
  <EuiInputPopover
    anchorPosition="downLeft"
    attachToAnchor={true}
    className="euiSuperSelect"
    closePopover={[Function]}
    display="block"
    fullWidth={false}
    input={
      <EuiSuperSelectControl
        className=""
        compressed={true}
        data-test-subj="createDataSourceFormAuthTypeSelect"
        disabled={false}
        fullWidth={false}
        id="generated-id"
        isInvalid={false}
        isLoading={false}
        name="Credential"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": "Username & Password",
              "value": "username_password",
            },
            Object {
              "inputDisplay": "AWS SigV4",
              "value": "sigv4",
            },
          ]
        }
        value="username_password"
      />
    }
    isOpen={false}
    panelPaddingSize="none"
  >
    <EuiPopover
      anchorPosition="downLeft"
      attachToAnchor={true}
      button={
        <EuiResizeObserver
          onResize={[Function]}
        >
          [Function]
        </EuiResizeObserver>
      }
      buttonRef={[Function]}
      className="euiInputPopover euiSuperSelect"
      closePopover={[Function]}
      display="block"
      hasArrow={true}
      isOpen={false}
      ownFocus={false}
      panelPaddingSize="none"
      panelRef={[Function]}
    >
      <EuiOutsideClickDetector
        onOutsideClick={[Function]}
      >
        <div
          className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="euiPopover__anchor"
          >
            <EuiResizeObserver
              onResize={[Function]}
            >
              <div>
                <EuiSuperSelectControl
                  className=""
                  compressed={true}
                  data-test-subj="createDataSourceFormAuthTypeSelect"
                  disabled={false}
                  fullWidth={false}
                  id="generated-id"
                  isInvalid={false}
                  isLoading={false}
                  name="Credential"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  options={
                    Array [
                      Object {
                        "inputDisplay": "Username & Password",
                        "value": "username_password",
                      },
                      Object {
                        "inputDisplay": "AWS SigV4",
                        "value": "sigv4",
                      },
                    ]
                  }
                  value="username_password"
                >
                  <input
                    id="generated-id"
                    name="Credential"
                    type="hidden"
                    value="username_password"
                  />
                  <EuiFormControlLayout
                    compressed={true}
                    fullWidth={false}
                    icon={
                      Object {
                        "side": "right",
                        "type": "arrowDown",
                      }
                    }
                    isLoading={false}
                  >
                    <div
                      className="euiFormControlLayout euiFormControlLayout--compressed"
                    >
                      <div
                        className="euiFormControlLayout__childrenWrapper"
                      >
                        <EuiScreenReaderOnly>
                          <span
                            className="euiScreenReaderOnly"
                            id="generated-id"
                          >
                            <EuiI18n
                              default="Select an option: {selectedValue}, is selected"
                              token="euiSuperSelectControl.selectAnOption"
                              values={
                                Object {
                                  "selectedValue": "Username & Password",
                                }
                              }
                            >
                              Select an option: Username & Password, is selected
                            </EuiI18n>
                          </span>
                        </EuiScreenReaderOnly>
                        <button
                          aria-haspopup="true"
                          aria-labelledby="generated-id generated-id"
                          className="euiSuperSelectControl euiSuperSelectControl--compressed"
                          data-test-subj="createDataSourceFormAuthTypeSelect"
                          disabled={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          Username & Password
                        </button>
                        <EuiFormControlLayoutIcons
                          compressed={true}
                          icon={
                            Object {
                              "side": "right",
                              "type": "arrowDown",
                            }
                          }
                          isLoading={false}
                        >
                          <div
                            className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                          >
                            <EuiFormControlLayoutCustomIcon
                              size="s"
                              type="arrowDown"
                            >
                              <span
                                className="euiFormControlLayoutCustomIcon"
                              >
                                <EuiIcon
                                  aria-hidden="true"
                                  className="euiFormControlLayoutCustomIcon__icon"
                                  size="s"
                                  type="arrowDown"
                                >
                                  <span
                                    aria-hidden="true"
                                    className="euiFormControlLayoutCustomIcon__icon"
                                    data-euiicon-type="arrowDown"
                                    size="s"
                                  />
                                </EuiIcon>
                              </span>
                            </EuiFormControlLayoutCustomIcon>
                          </div>
                        </EuiFormControlLayoutIcons>
                      </div>
                    </div>
                  </EuiFormControlLayout>
                </EuiSuperSelectControl>
              </div>
            </EuiResizeObserver>
          </div>
        </div>
      </EuiOutsideClickDetector>
    </EuiPopover>
  </EuiInputPopover>
</EuiCompressedSuperSelect>
`;

exports[`Datasource Management: Create Datasource form with different authType configurations should render normally with all authMethod combinations 6`] = `
<EuiCompressedSuperSelect
  compressed={true}
  data-test-subj="createDataSourceFormAuthTypeSelect"
  disabled={false}
  fullWidth={false}
  hasDividers={false}
  id="generated-id"
  isInvalid={false}
  isLoading={false}
  name="Credential"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  options={
    Array [
      Object {
        "inputDisplay": "No authentication",
        "value": "no_auth",
      },
      Object {
        "inputDisplay": "Username & Password",
        "value": "username_password",
      },
    ]
  }
  valueOfSelected="username_password"
>
  <EuiInputPopover
    anchorPosition="downLeft"
    attachToAnchor={true}
    className="euiSuperSelect"
    closePopover={[Function]}
    display="block"
    fullWidth={false}
    input={
      <EuiSuperSelectControl
        className=""
        compressed={true}
        data-test-subj="createDataSourceFormAuthTypeSelect"
        disabled={false}
        fullWidth={false}
        id="generated-id"
        isInvalid={false}
        isLoading={false}
        name="Credential"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": "No authentication",
              "value": "no_auth",
            },
            Object {
              "inputDisplay": "Username & Password",
              "value": "username_password",
            },
          ]
        }
        value="username_password"
      />
    }
    isOpen={false}
    panelPaddingSize="none"
  >
    <EuiPopover
      anchorPosition="downLeft"
      attachToAnchor={true}
      button={
        <EuiResizeObserver
          onResize={[Function]}
        >
          [Function]
        </EuiResizeObserver>
      }
      buttonRef={[Function]}
      className="euiInputPopover euiSuperSelect"
      closePopover={[Function]}
      display="block"
      hasArrow={true}
      isOpen={false}
      ownFocus={false}
      panelPaddingSize="none"
      panelRef={[Function]}
    >
      <EuiOutsideClickDetector
        onOutsideClick={[Function]}
      >
        <div
          className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="euiPopover__anchor"
          >
            <EuiResizeObserver
              onResize={[Function]}
            >
              <div>
                <EuiSuperSelectControl
                  className=""
                  compressed={true}
                  data-test-subj="createDataSourceFormAuthTypeSelect"
                  disabled={false}
                  fullWidth={false}
                  id="generated-id"
                  isInvalid={false}
                  isLoading={false}
                  name="Credential"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  options={
                    Array [
                      Object {
                        "inputDisplay": "No authentication",
                        "value": "no_auth",
                      },
                      Object {
                        "inputDisplay": "Username & Password",
                        "value": "username_password",
                      },
                    ]
                  }
                  value="username_password"
                >
                  <input
                    id="generated-id"
                    name="Credential"
                    type="hidden"
                    value="username_password"
                  />
                  <EuiFormControlLayout
                    compressed={true}
                    fullWidth={false}
                    icon={
                      Object {
                        "side": "right",
                        "type": "arrowDown",
                      }
                    }
                    isLoading={false}
                  >
                    <div
                      className="euiFormControlLayout euiFormControlLayout--compressed"
                    >
                      <div
                        className="euiFormControlLayout__childrenWrapper"
                      >
                        <EuiScreenReaderOnly>
                          <span
                            className="euiScreenReaderOnly"
                            id="generated-id"
                          >
                            <EuiI18n
                              default="Select an option: {selectedValue}, is selected"
                              token="euiSuperSelectControl.selectAnOption"
                              values={
                                Object {
                                  "selectedValue": "Username & Password",
                                }
                              }
                            >
                              Select an option: Username & Password, is selected
                            </EuiI18n>
                          </span>
                        </EuiScreenReaderOnly>
                        <button
                          aria-haspopup="true"
                          aria-labelledby="generated-id generated-id"
                          className="euiSuperSelectControl euiSuperSelectControl--compressed"
                          data-test-subj="createDataSourceFormAuthTypeSelect"
                          disabled={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          Username & Password
                        </button>
                        <EuiFormControlLayoutIcons
                          compressed={true}
                          icon={
                            Object {
                              "side": "right",
                              "type": "arrowDown",
                            }
                          }
                          isLoading={false}
                        >
                          <div
                            className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                          >
                            <EuiFormControlLayoutCustomIcon
                              size="s"
                              type="arrowDown"
                            >
                              <span
                                className="euiFormControlLayoutCustomIcon"
                              >
                                <EuiIcon
                                  aria-hidden="true"
                                  className="euiFormControlLayoutCustomIcon__icon"
                                  size="s"
                                  type="arrowDown"
                                >
                                  <span
                                    aria-hidden="true"
                                    className="euiFormControlLayoutCustomIcon__icon"
                                    data-euiicon-type="arrowDown"
                                    size="s"
                                  />
                                </EuiIcon>
                              </span>
                            </EuiFormControlLayoutCustomIcon>
                          </div>
                        </EuiFormControlLayoutIcons>
                      </div>
                    </div>
                  </EuiFormControlLayout>
                </EuiSuperSelectControl>
              </div>
            </EuiResizeObserver>
          </div>
        </div>
      </EuiOutsideClickDetector>
    </EuiPopover>
  </EuiInputPopover>
</EuiCompressedSuperSelect>
`;

exports[`Datasource Management: Create Datasource form with different authType configurations should render normally with all authMethod combinations 7`] = `
<EuiCompressedSuperSelect
  compressed={true}
  data-test-subj="createDataSourceFormAuthTypeSelect"
  disabled={false}
  fullWidth={false}
  hasDividers={false}
  id="generated-id"
  isInvalid={false}
  isLoading={false}
  name="Credential"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  options={
    Array [
      Object {
        "inputDisplay": "No authentication",
        "value": "no_auth",
      },
      Object {
        "inputDisplay": "Username & Password",
        "value": "username_password",
      },
      Object {
        "inputDisplay": "AWS SigV4",
        "value": "sigv4",
      },
    ]
  }
  valueOfSelected="username_password"
>
  <EuiInputPopover
    anchorPosition="downLeft"
    attachToAnchor={true}
    className="euiSuperSelect"
    closePopover={[Function]}
    display="block"
    fullWidth={false}
    input={
      <EuiSuperSelectControl
        className=""
        compressed={true}
        data-test-subj="createDataSourceFormAuthTypeSelect"
        disabled={false}
        fullWidth={false}
        id="generated-id"
        isInvalid={false}
        isLoading={false}
        name="Credential"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": "No authentication",
              "value": "no_auth",
            },
            Object {
              "inputDisplay": "Username & Password",
              "value": "username_password",
            },
            Object {
              "inputDisplay": "AWS SigV4",
              "value": "sigv4",
            },
          ]
        }
        value="username_password"
      />
    }
    isOpen={false}
    panelPaddingSize="none"
  >
    <EuiPopover
      anchorPosition="downLeft"
      attachToAnchor={true}
      button={
        <EuiResizeObserver
          onResize={[Function]}
        >
          [Function]
        </EuiResizeObserver>
      }
      buttonRef={[Function]}
      className="euiInputPopover euiSuperSelect"
      closePopover={[Function]}
      display="block"
      hasArrow={true}
      isOpen={false}
      ownFocus={false}
      panelPaddingSize="none"
      panelRef={[Function]}
    >
      <EuiOutsideClickDetector
        onOutsideClick={[Function]}
      >
        <div
          className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="euiPopover__anchor"
          >
            <EuiResizeObserver
              onResize={[Function]}
            >
              <div>
                <EuiSuperSelectControl
                  className=""
                  compressed={true}
                  data-test-subj="createDataSourceFormAuthTypeSelect"
                  disabled={false}
                  fullWidth={false}
                  id="generated-id"
                  isInvalid={false}
                  isLoading={false}
                  name="Credential"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  options={
                    Array [
                      Object {
                        "inputDisplay": "No authentication",
                        "value": "no_auth",
                      },
                      Object {
                        "inputDisplay": "Username & Password",
                        "value": "username_password",
                      },
                      Object {
                        "inputDisplay": "AWS SigV4",
                        "value": "sigv4",
                      },
                    ]
                  }
                  value="username_password"
                >
                  <input
                    id="generated-id"
                    name="Credential"
                    type="hidden"
                    value="username_password"
                  />
                  <EuiFormControlLayout
                    compressed={true}
                    fullWidth={false}
                    icon={
                      Object {
                        "side": "right",
                        "type": "arrowDown",
                      }
                    }
                    isLoading={false}
                  >
                    <div
                      className="euiFormControlLayout euiFormControlLayout--compressed"
                    >
                      <div
                        className="euiFormControlLayout__childrenWrapper"
                      >
                        <EuiScreenReaderOnly>
                          <span
                            className="euiScreenReaderOnly"
                            id="generated-id"
                          >
                            <EuiI18n
                              default="Select an option: {selectedValue}, is selected"
                              token="euiSuperSelectControl.selectAnOption"
                              values={
                                Object {
                                  "selectedValue": "Username & Password",
                                }
                              }
                            >
                              Select an option: Username & Password, is selected
                            </EuiI18n>
                          </span>
                        </EuiScreenReaderOnly>
                        <button
                          aria-haspopup="true"
                          aria-labelledby="generated-id generated-id"
                          className="euiSuperSelectControl euiSuperSelectControl--compressed"
                          data-test-subj="createDataSourceFormAuthTypeSelect"
                          disabled={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          Username & Password
                        </button>
                        <EuiFormControlLayoutIcons
                          compressed={true}
                          icon={
                            Object {
                              "side": "right",
                              "type": "arrowDown",
                            }
                          }
                          isLoading={false}
                        >
                          <div
                            className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                          >
                            <EuiFormControlLayoutCustomIcon
                              size="s"
                              type="arrowDown"
                            >
                              <span
                                className="euiFormControlLayoutCustomIcon"
                              >
                                <EuiIcon
                                  aria-hidden="true"
                                  className="euiFormControlLayoutCustomIcon__icon"
                                  size="s"
                                  type="arrowDown"
                                >
                                  <span
                                    aria-hidden="true"
                                    className="euiFormControlLayoutCustomIcon__icon"
                                    data-euiicon-type="arrowDown"
                                    size="s"
                                  />
                                </EuiIcon>
                              </span>
                            </EuiFormControlLayoutCustomIcon>
                          </div>
                        </EuiFormControlLayoutIcons>
                      </div>
                    </div>
                  </EuiFormControlLayout>
                </EuiSuperSelectControl>
              </div>
            </EuiResizeObserver>
          </div>
        </div>
      </EuiOutsideClickDetector>
    </EuiPopover>
  </EuiInputPopover>
</EuiCompressedSuperSelect>
`;
